--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 #Site settings
 
 # SEO settings
-title: CFS 44 
+title: CFS 44 Timetable
 author: Committee on World Food Security (CFS)
 email: cfs@fao.org
 description: > # this means to ignore newlines until "baseurl:"
